### To do list: ###

* remove ID in database tables
* add a thread to handle plots
* handle nan in plots and keep empty data

  
### To fix list: ###

* in about window, the path of the changelog is relative and can't work once compiled.


### October 3 2021, Release version 0.7.4 ###

  * FIXED:
    * path for changelog in compiled version has been fixed.


### October 3 2021, Release version 0.7.3 ###

  * FIXED:
    * fixed an issue with icons in option and about windows.


### October 3 2021, Release version 0.7.2 ###

  * FIXED:
    * fixed an issue with MF forecast not fully displaying in 1h forecast section.


### October 2 2021, Release version 0.7.1 ###

  * FIXED:
    * the gui path was missing in the connexion window.
    * icons indicating forecast and time series pages were not loaded correctly.
    * name 'time' has been replaced by 't' for a variable to avoid conflict with time module.
    * fixed issues with icons in forecast windows.
    * fixed issue with icons in update and download windows.
    * try to fix an issue with MF forecast.


### September 26 2021, Release version 0.7.0 ###

  * FIXED:
    * an issue was fixed in the sensor reading thread about calibration parameters.
    * fixed plot limits when data for time series are NaN.
    * fixed plots not refreshing when the TS button is clicked.
    * fixed missing parameters for computation of calibration in sensors reading.

  * ADDED:
    * new log messages have been added.
    * a new weather icon has been added.
    * a new window has been added to ask the user if he wants to retry a new connexion to internet in case of no
    connexion detection.
    * a spinner has been added when heavy time series are ploted.

  * MODIFIED:
    * database has been modified to allow NULL data.
    * update process is now working as it should and has been frozen.
    * the display of T, P, H, min and max has been improved. If data are too old, they are not displayed.